# opencl_experiments

./: README.md
inclusive_scan/: .tags  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  inclusive_scan  inclusive_scan.cbp  inclusive_scan.cl  input.txt  main.cpp
matrix_convolution/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input1.txt  main.cpp  matrix_conv.cl  matrix_convolution  matrix_convolution.cbp
vector_add_example/: CMakeLists.txt  main.cpp  vector_add.cl
